--- a/src/components/AwarenessSection.css
+++ b/src/components/AwarenessSection.css
@@ -77,15 +77,16 @@
 }
 
 .story-image {
-  flex: 1;
+  flex: 0.5;
   padding-right: 20px;
 }
 
 .story-image img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
-  border-radius: 8px;
+  object-fit:fill;
+  border-radius: 10px;
+  margin-left: 20px ;
 }
 
 .story-content {
