--- a/src/components/Map.css
+++ b/src/components/Map.css
@@ -70,4 +70,21 @@
   margin-bottom: 5px;
   color: var(--primary-color);
 }
+.section-title {
+  font-size: 2rem; 
+  font-weight: bold;
+  color: #333; 
+  text-align: center;
+  margin-top: 20px !important;
+  margin-bottom: 10px;
+  position: relative; 
+}
 
+.section-title::after {
+  content: "";
+  display: block;
+  width: 50px; 
+  height: 4px; 
+  background-color: #ff6347; 
+  margin: 10px auto 0; 
+}
