--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -10,8 +10,25 @@
   top: 0;
   z-index: 100;
 }
+.logo1 {
+  display: flex;
+  align-items: center;
+  height: 80px;
+}
+
+.logo1 img {
+  height: 190px; /* Adjust the height as needed */
+  margin-right: 10px; /* Space between the logo image and the text */
+}
 .logo h1{
-  font-size: 30px!important ;
+  height: 80px;
+  display: flex;
+  align-items :end !important;
+  font-size: 40px!important ;
+  margin-left: -600px !important;
+  color: var(--primary-color);
+  font-size: 50px;
+  font-weight: 700;
 }
 
 .header-container {
@@ -21,11 +38,6 @@
   padding: 15px 20px;
 }
 
-.logo h1 {
-  color: var(--primary-color);
-  font-size: 1.5rem;
-  font-weight: 700;
-}
 
 .nav-list {
   display: flex;
